plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  late final _py_newvec2iPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, c11_vec2i)>>(
          'py_newvec2i');
  late final _py_newvec2i =
      _py_newvec2iPtr.asFunction<void Function(py_OutRef, c11_vec2i)>();

  void py_newvec3i(
    py_OutRef out,
    c11_vec3i arg1,
  ) {
    return _py_newvec3i(
      out,
      arg1,
    );
  }

  late final _py_newvec3iPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, c11_vec3i)>>(
          'py_newvec3i');
  late final _py_newvec3i =
      _py_newvec3iPtr.asFunction<void Function(py_OutRef, c11_vec3i)>();

  ffi.Pointer<c11_mat3x3> py_newmat3x3(
    py_OutRef out,
  ) {
    return _py_newmat3x3(
      out,
    );
  }

  late final _py_newmat3x3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<c11_mat3x3> Function(py_OutRef)>>(
          'py_newmat3x3');
  late final _py_newmat3x3 = _py_newmat3x3Ptr
      .asFunction<ffi.Pointer<c11_mat3x3> Function(py_OutRef)>();

  c11_vec2 py_tovec2(
    py_Ref self,
  ) {
    return _py_tovec2(
      self,
    );
  }

  late final _py_tovec2Ptr =
      _lookup<ffi.NativeFunction<c11_vec2 Function(py_Ref)>>('py_tovec2');
  late final _py_tovec2 = _py_tovec2Ptr.asFunction<c11_vec2 Function(py_Ref)>();

  c11_vec3 py_tovec3(
    py_Ref self,
  ) {
    return _py_tovec3(
      self,
    );
  }

  late final _py_tovec3Ptr =
      _lookup<ffi.NativeFunction<c11_vec3 Function(py_Ref)>>('py_tovec3');
  late final _py_tovec3 = _py_tovec3Ptr.asFunction<c11_vec3 Function(py_Ref)>();

  c11_vec2i py_tovec2i(
    py_Ref self,
  ) {
    return _py_tovec2i(
      self,
    );
  }

  late final _py_tovec2iPtr =
      _lookup<ffi.NativeFunction<c11_vec2i Function(py_Ref)>>('py_tovec2i');
  late final _py_tovec2i =
      _py_tovec2iPtr.asFunction<c11_vec2i Function(py_Ref)>();

  c11_vec3i py_tovec3i(
    py_Ref self,
  ) {
    return _py_tovec3i(
      self,
    );
  }

  late final _py_tovec3iPtr =
      _lookup<ffi.NativeFunction<c11_vec3i Function(py_Ref)>>('py_tovec3i');
  late final _py_tovec3i =
      _py_tovec3iPtr.asFunction<c11_vec3i Function(py_Ref)>();

  ffi.Pointer<c11_mat3x3> py_tomat3x3(
    py_Ref self,
  ) {
    return _py_tomat3x3(
      self,
    );
  }

  late final _py_tomat3x3Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<c11_mat3x3> Function(py_Ref)>>(
          'py_tomat3x3');
  late final _py_tomat3x3 =
      _py_tomat3x3Ptr.asFunction<ffi.Pointer<c11_mat3x3> Function(py_Ref)>();

  /// An utility function to read a line from stdin for REPL.
  int py_replinput(
    ffi.Pointer<ffi.Char> buf,
    int max_size,
  ) {
    return _py_replinput(
      buf,
      max_size,
    );
  }

  late final _py_replinputPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'py_replinput');
  late final _py_replinput =
      _py_replinputPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();
}

final class c11_vec2i extends ffi.Union {
  external UnnamedStruct1 unnamed;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> data;
}

final class UnnamedStruct1 extends ffi.Struct {
  @ffi.Int()
  external int x;

  @ffi.Int()
  external int y;
}

final class c11_vec3i extends ffi.Union {
  external UnnamedStruct2 unnamed;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Int> data;
}

final class UnnamedStruct2 extends ffi.Struct {
  @ffi.Int()
  external int x;

  @ffi.Int()
  external int y;

  @ffi.Int()
  external int z;
}

final class c11_vec2 extends ffi.Union {
  external UnnamedStruct3 unnamed;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.Float> data;
}

final class UnnamedStruct3 extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;
}

final class c11_vec3 extends ffi.Union {
  external UnnamedStruct4 unnamed;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Float> data;
}

final class UnnamedStruct4 extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class c11_mat3x3 extends ffi.Union {
  external UnnamedStruct5 unnamed;

  @ffi.Array.multi([3, 3])
  external ffi.Array<ffi.Array<ffi.Float>> m;

  @ffi.Array.multi([9])
  external ffi.Array<ffi.Float> data;
}

final class UnnamedStruct5 extends ffi.Struct {
  @ffi.Float()
  external double _11;

  @ffi.Float()
  external double _12;

  @ffi.Float()
  external double _13;

  @ffi.Float()
  external double _21;

  @ffi.Float()
  external double _22;

  @ffi.Float()
  external double _23;

  @ffi.Float()
  external double _31;

  @ffi.Float()
  external double _32;

  @ffi.Float()
  external double _33;
}

final class py_TValue extends ffi.Opaque {}

/// A string view type. It is helpful for passing strings which are not null-terminated.
final class c11_sv extends ffi.Struct {
  external ffi.Pointer<ffi.Char> data;

  @ffi.Int()
  external int size;
}

/// A struct contains the callbacks of the VM.
final class py_Callbacks extends ffi.Struct {
  /// Used by `__import__` to load source code of a module.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>> importfile;

  /// Used by `print` to output a string.
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>
      print;
}

/// Python compiler modes.
/// + `EXEC_MODE`: for statements.
/// + `EVAL_MODE`: for expressions.
/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
abstract class py_CompileMode {
  static const int EXEC_MODE = 0;
  static const int EVAL_MODE = 1;
  static const int SINGLE_MODE = 2;
}

/// A generic reference to a python object.
typedef py_Ref = ffi.Pointer<py_TValue>;

/// An output reference for returning a value.
typedef py_OutRef = ffi.Pointer<py_TValue>;

/// A global reference which has the same lifespan as the VM.
typedef py_GlobalRef = ffi.Pointer<py_TValue>;

/// A 64-bit integer type. Corresponds to `int` in python.
typedef py_i64 = ffi.Int64;

/// A 64-bit floating-point type. Corresponds to `float` in python.
typedef py_f64 = ffi.Double;

/// Native function signature.
/// @param argc number of arguments.
/// @param argv array of arguments. Use `py_arg(i)` macro to get the i-th argument.
/// @return `true` if the function is successful or `false` if an exception is raised.
typedef py_CFunction = ffi.Pointer<
    ffi.NativeFunction<ffi.Bool Function(ffi.Int argc, py_StackRef argv)>>;

/// A specific location in the value stack of the VM.
typedef py_StackRef = ffi.Pointer<py_TValue>;

/// An integer that represents a python identifier. This is to achieve string pooling and fast name
/// resolution.
typedef py_Name = ffi.Uint16;

/// An integer that represents a python type. `0` is invalid.
typedef py_Type = ffi.Int16;

/// A generic destructor function.
typedef py_Dtor
    = ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>;

/// An item reference to a container object. It invalidates when the container is modified.
typedef py_ItemRef = ffi.Pointer<py_TValue>;

/// A reference which has the same lifespan as the python object.
typedef py_ObjectRef = ffi.Pointer<py_TValue>;

/// Python favored string formatting.
/// %d: int
/// %i: py_i64 (int64_t)
/// %f: py_f64 (double)
/// %s: const char*
/// %q: c11_sv
/// %v: c11_sv
/// %c: char
/// %p: void*
/// %t: py_Type
/// %n: py_Name
abstract class py_MagicNames {
  /// 0 is reserved
  static const int py_MagicNames__NULL = 0;

  /// math operators
  static const int __lt__ = 1;
  static const int __le__ = 2;
  static const int __gt__ = 3;
  static const int __ge__ = 4;

  /// //////////////////////////
  static const int __neg__ = 5;
  static const int __abs__ = 6;
  static const int __float__ = 7;
  static const int __int__ = 8;
  static const int __round__ = 9;
  static const int __divmod__ = 10;

  /// //////////////////////////
  static const int __add__ = 11;
  static const int __radd__ = 12;
  static const int __sub__ = 13;
  static const int __rsub__ = 14;
  static const int __mul__ = 15;
  static const int __rmul__ = 16;
  static const int __truediv__ = 17;
  static const int __rtruediv__ = 18;
  static const int __floordiv__ = 19;
  static const int __rfloordiv__ = 20;
  static const int __mod__ = 21;
  static const int __rmod__ = 22;
  static const int __pow__ = 23;
  static const int __rpow__ = 24;
  static const int __matmul__ = 25;
  static const int __lshift__ = 26;
  static const int __rshift__ = 27;
  static const int __and__ = 28;
  static const int __or__ = 29;
  static const int __xor__ = 30;

  /// //////////////////////////
  static const int __repr__ = 31;
  static const int __str__ = 32;
  static const int __hash__ = 33;
  static const int __len__ = 34;
  static const int __iter__ = 35;
  static const int __next__ = 36;
  static const int __contains__ = 37;
  static const int __bool__ = 38;
  static const int __invert__ = 39;

  /// //////////////////////////
  static const int __eq__ = 40;
  static const int __ne__ = 41;

  /// indexer
  static const int __getitem__ = 42;
  static const int __setitem__ = 43;
  static const int __delitem__ = 44;

  /// specials
  static const int __new__ = 45;
  static const int __init__ = 46;
  static const int __call__ = 47;
  static const int __enter__ = 48;
  static const int __exit__ = 49;
  static const int __name__ = 50;
  static const int __all__ = 51;
  static const int __package__ = 52;
  static const int __path__ = 53;
  static const int __class__ = 54;
  static const int __getattr__ = 55;
  static const int __reduce__ = 56;
  static const int __missing__ = 57;
}

abstract class py_PredefinedTypes {
  static const int tp_nil = 0;
  static const int tp_object = 1;

  /// py_Type
  static const int tp_type = 2;
  static const int tp_int = 3;
  static const int tp_float = 4;
  static const int tp_bool = 5;
  static const int tp_str = 6;
  static const int tp_str_iterator = 7;

  /// c11_vector
  static const int tp_list = 8;

  /// N slots
  static const int tp_tuple = 9;
  static const int tp_array_iterator = 10;

  /// 3 slots (start, stop, step)
  static const int tp_slice = 11;
  static const int tp_range = 12;
  static const int tp_range_iterator = 13;
  static const int tp_module = 14;
  static const int tp_function = 15;
  static const int tp_nativefunc = 16;

  /// 2 slots (self, func)
  static const int tp_boundmethod = 17;

  /// 1 slot + py_Type
  static const int tp_super = 18;

  /// 2 slots (arg + inner_exc)
  static const int tp_BaseException = 19;
  static const int tp_Exception = 20;
  static const int tp_bytes = 21;
  static const int tp_namedict = 22;
  static const int tp_locals = 23;
  static const int tp_code = 24;
  static const int tp_dict = 25;

  /// 1 slot
  static const int tp_dict_items = 26;

  /// 2 slots (getter + setter)
  static const int tp_property = 27;

  /// 1 slot + int level
  static const int tp_star_wrapper = 28;

  /// 1 slot
  static const int tp_staticmethod = 29;

  /// 1 slot
  static const int tp_classmethod = 30;
  static const int tp_NoneType = 31;
  static const int tp_NotImplementedType = 32;
  static const int tp_ellipsis = 33;
  static const int tp_generator = 34;

  /// builtin exceptions
  static const int tp_SystemExit = 35;
  static const int tp_KeyboardInterrupt = 36;
  static const int tp_StopIteration = 37;
  static const int tp_SyntaxError = 38;
  static const int tp_StackOverflowError = 39;
  static const int tp_OSError = 40;
  static const int tp_NotImplementedError = 41;
  static const int tp_TypeError = 42;
  static const int tp_IndexError = 43;
  static const int tp_ValueError = 44;
  static const int tp_RuntimeError = 45;
  static const int tp_ZeroDivisionError = 46;
  static const int tp_NameError = 47;
  static const int tp_UnboundLocalError = 48;
  static const int tp_AttributeError = 49;
  static const int tp_ImportError = 50;
  static const int tp_AssertionError = 51;
  static const int tp_KeyError = 52;
